2006-06-05  Richard Hughes  <richard@hughsie.com>

	* INSTALL:
	Add this GNU required file.

	* man/on_ac_power.1:
	* man/pm-pmu.1:
	Newest files (from the SGML files)

	* .cvsignore:
	* man/.cvsignore:
	* pm/.cvsignore:
	* pm/Makefile.am:
	* pm/hooks/.cvsignore:
	* pm/power.d/.cvsignore:
	* src/.cvsignore:
	Add these files to keep cvs happy.

2006-06-05  Richard Hughes  <richard@hughsie.com>

	* Makefile:
	Remove old build system, as Makefile is now autogenerated.

	* Makefile.am:
	* configure.in:
	Add in master build files for the autotooled build system.

2006-06-05  Richard Hughes  <richard@hughsie.com>

	* man/Makefile.am:
	Connect up the sgml->.1 conversion to the autotools build system.

2006-06-05  Richard Hughes  <richard@hughsie.com>

	* MAINTAINERS:
	Add pjones as maintainer.

	* autogen.sh:
	* pm/Makefile.am:
	* pm/hooks/Makefile.am:
	* pm/power.d/Makefile.am:
	Start to add autotools build system.

2006-06-05  Richard Hughes  <richard@hughsie.com>

	* man/on_ac_power.sgml:
	* man/pm-pmu.sgml:
	Don't use hardcoded .1 files, instead generate them using sgml files.

2006-06-05  Richard Hughes  <richard@hughsie.com>

	* NEWS: Add this file for release news. Required for autofoo.

2006-05-17  Richard Hughes  <richard@hughsie.com>

	* .cvsignore:
	Add this file to keep CVS happy.

	* pm/power.d/laptop-tools:
	* Makefile.am:
	Add this folder and file to make the low power actions easy to add.

	* pm-powersave:
	Do not just do hardcoded actions, instead run the scripts in
	/etc/pm/power.d/ with true and false arguments.

2006-05-02  Peter Jones  <pjones@redhat.com>

	* pm-pmu.c: Add a hack for bad system headers.

2006-05-02  Peter Jones  <pjones@redhat.com>

	* pm-action: add copyright and license notice.
	* Makefile: Add pm-pmu.c and pm-pmu.1 .
	* Makefile: Change CFLAGS; -g and friends should come from
	RPM_OPT_FLAGS when desired.
	* pm-pmu.c: suspend helper for b0rked macs.
	* pm-pmu.1: man page
	* pm/functions (pm_main): try pm-pmu before echoing stuff
