@@ -1,0 +1,17 @@
+sbin_PROGRAMS =			\
+	pm-pmu
+
+pm_pmu_SOURCES = pm-pmu.c
+
+extradir = $(sbindir)
+
+extra_SCRIPTS =			\
+	pm-powersave		\
+	pm-action		\
+	on_ac_power
+
+EXTRA_DIST =			\
+	$(extra_SCRIPTS)
+
+clean-local :
+	rm -f *~
